# wechat-translate

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
config/: doubao_tts.json  listener.json  listener.md  (+1 more)
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/capabilities/: default.json
rust/src-tauri/icons/: icon.icns
rust/src-tauri/src/: app_state.rs  audio_cache.rs  avatar_capture.rs  config.rs  db.rs  events.rs  history_summary.rs  image_cache.rs  lib.rs  main.rs  runtime_monitor_ingest.rs  runtime_monitor_loop.rs  runtime_translator_runtime.rs  sidebar_projection.rs  sidebar_window.rs  task_manager.rs  translator.rs  tts_service.rs
rust/src-tauri/src/adapter/: applescript.rs  ax_reader.rs  mod.rs
rust/src-tauri/src/application/: mod.rs
rust/src-tauri/src/application/chat_agent/: mod.rs  service.rs  session.rs
rust/src-tauri/src/application/chat_agent/tools/: context_tool.rs  mod.rs  schema_tool.rs  sql_tool.rs
rust/src-tauri/src/application/history/: mod.rs  query_service.rs  summary_service.rs
rust/src-tauri/src/application/runtime/: lifecycle.rs  mod.rs  monitor_ingest.rs  monitor_loop.rs  read_service.rs  service.rs  sidebar_runtime.rs  snapshot_service.rs  state.rs  status_sync.rs  translation_config.rs  translator_runtime.rs
rust/src-tauri/src/application/settings/: mod.rs  service.rs
rust/src-tauri/src/application/sidebar/: mod.rs  projection_service.rs  snapshot_service.rs
rust/src-tauri/src/commands/: app_state.rs  audio.rs  config.rs  db.rs  dictionary.rs  history.rs  listen.rs  mod.rs  preflight.rs  send.rs  sessions.rs  sidebar.rs  tray.rs
rust/src-tauri/src/dictionary/: api.rs  db.rs  events.rs  mod.rs  router.rs  translation_worker.rs  types.rs
rust/src-tauri/src/dictionary/providers/: mod.rs
rust/src-tauri/src/dictionary/providers/cambridge/: README.md  lookup.rs  mod.rs  types.rs
rust/src-tauri/src/infrastructure/: mod.rs
rust/src-tauri/src/infrastructure/tauri/: mod.rs  tray_adapter.rs
rust/src-tauri/src/interface/: mod.rs
rust/src-tauri/src/interface/commands/: agent.rs  audio.rs  config.rs  db_admin.rs  dictionary.rs  history.rs  mod.rs  preflight.rs  runtime.rs  sidebar.rs  tray.rs  tts.rs
rust/src-tauri/src/interface/queries/: app_state.rs  history.rs  mod.rs  sessions.rs  sidebar.rs
rust/src-tauri/src/translator/: client.rs  config.rs  limiter.rs  mod.rs  service.rs  traits.rs
rust/src-tauri/src/translator/ai/: client.rs  mod.rs  models_registry.rs
rust/src-tauri/src/translator/deeplx/: client.rs  mod.rs
(+101 files in other folders)
