[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-pc-auto"                
version = "1.1.2"
description = "Stable WeChat PC session-preview listener with sidebar translation"
readme = "README.md"
authors = [{name = "YourName", email = "your@email.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["wechat", "listener", "uiautomation", "windows", "translation", "sidebar"]
requires-python = ">=3.8"
dependencies = [
    "uiautomation>=2.0.18",
    "websockets>=14.0",
]

[project.urls]
Homepage = "https://github.com/yourname/wechat-pc-auto"
Repository = "https://github.com/yourname/wechat-pc-auto"
Issues = "https://github.com/yourname/wechat-pc-auto/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wechat_auto*"]               # 关键：必须匹配包名
