[package]
name = "wechat-pc-auto"
version = "0.1.1"
description = "WeChat PC Auto - macOS automation tool"
authors = ["wang"]
edition = "2021"
default-run = "wechat-pc-auto"

[lib]
name = "wechat_pc_auto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ax-test"
path = "src/bin/ax_test.rs"

[[bin]]
name = "ax-dump"
path = "src/bin/ax_dump.rs"

[[bin]]
name = "ax-deep"
path = "src/bin/ax_deep.rs"

[[bin]]
name = "ax-msg"
path = "src/bin/ax_msg.rs"

[[bin]]
name = "ax-sender"
path = "src/bin/ax_sender.rs"

[[bin]]
name = "ax-research"
path = "src/bin/ax_research.rs"

[[bin]]
name = "ax-side"
path = "src/bin/ax_side.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
md5 = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
